// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobTasks /> should render properly with job tasks 1`] = `
.emotion-28 {
  height: auto;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-27 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-27 tr {
  background-color: #252525;
}

.emotion-27 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-27 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-27 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-27 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-27 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-27 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-27 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-27 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-27 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-6:nth-of-type(3) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  padding-left: 16px;
}

.emotion-15 {
  font-style: italic;
}

<div
  className="emotion-28"
>
  <div
    className="emotion-5"
  >
    <h3
      className="emotion-0"
    >
      Number of 
      Tasks
      : 
      3
    </h3>
    <button
      className="emotion-4"
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-3"
      >
        <svg
          className="emotion-1"
          color="#ffffff"
          data-file-name="refresh.svg"
          width={20}
        />
        <div
          className="emotion-2"
        >
          Refresh 
          Tasks
        </div>
      </div>
    </button>
  </div>
  <table
    className="emotion-27"
  >
    <thead>
      <tr>
        <th
          className="emotion-6"
        >
          Task State
        </th>
        <th
          className="emotion-6"
        >
          Task ID
        </th>
        <th
          className="emotion-6"
        >
          Description
        </th>
        <th
          className="emotion-6"
        >
          Duration
        </th>
        <th
          className="emotion-6"
        >
          Assets
        </th>
        <th
          className="emotion-6"
        >
          Started
        </th>
        <th
          className="emotion-6"
        >
          Errors
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="emotion-14"
        >
          <svg
            color="#ffffff"
            data-file-name="clock.svg"
            width={20}
          />
          <span
            className="emotion-13"
          >
            Waiting
          </span>
        </td>
        <td
          title="c812fa09-5f3a-11ea-bb46-6a6895b1a9f6"
        >
          c812fa09-5f3a-11ea-bb46-6a6895b1a9f6
        </td>
        <td
          title="Expand with 20 assets, 8 processors."
        >
          Expand with 20 assets, 8 processors.
        </td>
        <td>
          <div
            className="emotion-15"
          >
            Waiting...
          </div>
        </td>
        <td>
          20
        </td>
        <td>
          <div
            className="emotion-15"
          >
            Waiting...
          </div>
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-14"
        >
          <svg
            color="#ebb52e"
            data-file-name="generating.svg"
            width={20}
          />
          <span
            className="emotion-13"
          >
            Running
          </span>
        </td>
        <td
          title="ea7836f2-44a7-19e1-a67f-1e6fa1f82545"
        >
          ea7836f2-44a7-19e1-a67f-1e6fa1f82545
        </td>
        <td
          title="Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'"
        >
          Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'
        </td>
        <td>
          06h : 42m : 49s
        </td>
        <td>
          0
        </td>
        <td>
          2020-03-05 23:41:02
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-14"
        >
          <svg
            color="#4ac565"
            data-file-name="checkmark.svg"
            width={20}
          />
          <span
            className="emotion-13"
          >
            Success
          </span>
        </td>
        <td
          title="ea7836f3-44a7-19e1-a67f-1e6fa1f82545"
        >
          ea7836f3-44a7-19e1-a67f-1e6fa1f82545
        </td>
        <td
          title="Expand with 15 assets, 8 processors."
        >
          Expand with 15 assets, 8 processors.
        </td>
        <td>
          06h : 42m : 49s
        </td>
        <td>
          15
        </td>
        <td>
          2020-03-05 23:41:55
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-14"
        >
          <svg
            color="#c92300"
            data-file-name="crossSmall.svg"
            width={20}
          />
          <span
            className="emotion-13"
          >
            Failure
          </span>
        </td>
        <td
          title="c812fa09-5f3a-11ea-bb46-6a6895b1a9f9"
        >
          c812fa09-5f3a-11ea-bb46-6a6895b1a9f9
        </td>
        <td
          title="Expand with 20 assets, 8 processors."
        >
          Expand with 20 assets, 8 processors.
        </td>
        <td>
          06h : 42m : 49s
        </td>
        <td>
          20
        </td>
        <td>
          2020-03-05 23:41:06
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-14"
        >
          <svg
            color="#808080"
            data-file-name="paused.svg"
            width={20}
          />
          <span
            className="emotion-13"
          >
            Skipped
          </span>
        </td>
        <td
          title="ea7836f2-44a7-19e1-a67f-1e6fa1f82549"
        >
          ea7836f2-44a7-19e1-a67f-1e6fa1f82549
        </td>
        <td
          title="Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'"
        >
          Crawling files in 'gs://zmlp-private-test-data/zorroa-deploy-testdata/zorroa-cypress-testdata/cats/'
        </td>
        <td>
          06h : 42m : 49s
        </td>
        <td>
          0
        </td>
        <td>
          2020-03-05 23:41:02
        </td>
        <td>
          0
        </td>
      </tr>
      <tr>
        <td
          className="emotion-14"
        >
          <svg
            color="#4a90e2"
            data-file-name="squareSquareSquare.svg"
            width={20}
          />
          <span
            className="emotion-13"
          >
            Queued
          </span>
        </td>
        <td
          title="ea7836f3-44a7-19e1-a67f-1e6fa1f82549"
        >
          ea7836f3-44a7-19e1-a67f-1e6fa1f82549
        </td>
        <td
          title="Expand with 15 assets, 8 processors."
        >
          Expand with 15 assets, 8 processors.
        </td>
        <td>
          06h : 42m : 49s
        </td>
        <td>
          15
        </td>
        <td>
          2020-03-05 23:41:55
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
  <div>
     
  </div>
  <div>
     
  </div>
</div>
`;

exports[`<JobTasks /> should render properly without job tasks 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px 16px;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-6:nth-of-type(3) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-17 {
  height: 100%;
}

.emotion-16 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-16 tr {
  background-color: #252525;
}

.emotion-16 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-16 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-16 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-16 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-16 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-16 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-16 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-16 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-16 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-15 {
  height: 100%;
  pointer-events: none;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
  className="emotion-17"
>
  <div
    className="emotion-5"
  >
    <h3
      className="emotion-0"
    >
      Number of 
      Tasks
      : 
      0
    </h3>
    <button
      className="emotion-4"
      onClick={[Function]}
      type="button"
    >
      <div
        className="emotion-3"
      >
        <svg
          className="emotion-1"
          color="#ffffff"
          data-file-name="refresh.svg"
          width={20}
        />
        <div
          className="emotion-2"
        >
          Refresh 
          Tasks
        </div>
      </div>
    </button>
  </div>
  <table
    className="emotion-16"
  >
    <thead>
      <tr>
        <th
          className="emotion-6"
        >
          Task State
        </th>
        <th
          className="emotion-6"
        >
          Task ID
        </th>
        <th
          className="emotion-6"
        >
          Description
        </th>
        <th
          className="emotion-6"
        >
          Duration
        </th>
        <th
          className="emotion-6"
        >
          Assets
        </th>
        <th
          className="emotion-6"
        >
          Started
        </th>
        <th
          className="emotion-6"
        >
          Errors
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="emotion-15"
      >
        <td
          colSpan={7}
        >
          <div
            className="emotion-14"
          >
            <div
              className="emotion-13"
            >
              <svg
                data-file-name="noJobs.svg"
                width={200}
              />
              <div>
                This job has no tasks.
              </div>
              <div>
                Any new task will appear here.
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div>
     
  </div>
  <div>
     
  </div>
</div>
`;
